<resources>
    <string name="app_name">MoveWave</string>
    <string name="tvMoveWave">MoveWave</string>
    <string name="tvEmbrace">Îmbrățișează puterea</string>
    <string name="btnGetStarted">Începe</string>
    <string name="tvLoginLogo">Login</string>
    <string name="etHintEmail">Email</string>
    <string name="etHintPwd">Parolă</string>
    <string name="btnLogin">Intră în cont</string>
    <string name="or">Sau</string>
    <string name="orRegister">Nu aveți cont?</string>
    <string name="tvSignUp">Creaază cont</string>
    <string name="tvHeyThere">Bună,</string>
    <string name="tvCreateAccount">Creează-ți contul</string>
    <string name="hintUsername">Username</string>
    <string name="hintConfirmPwd">Confirmă parola</string>
    <string name="tvAlreadyHaveAcc">Aveți deja un cont?</string>
    <string name="tvLogin">Autentificați-vă</string>
    <string name="btnRegister">Înregistrați contul</string>
    <string name="tvCompleteProfile">Hai să îți completăm profilul</string>
    <string name="tvHelpUs">Ne va ajuta să te cunoaștem mai bine</string>
    <string name="hintFullName">Numele tău complet</string>
    <string name="rbFemale">Femeie</string>
    <string name="rbMale">Bărbat</string>
    <string name="tvYourSex">Sexul:</string>
    <string name="hintWeight">Greutatea (kg)</string>
    <string name="hintAge">Vârsta</string>
    <string name="tvYourActivityLevel">Nivelul curent de activitate:</string>
    <string-array name="spinnerLevels">
        <item>Sedentar (Exercițiu puțin sau aproape deloc)</item>
        <item>Activ moderat (Exerciții moderate/sport 3–5 zile per săptămână)</item>
        <item>Activ viguros (Exerciții grele/sport 6–7 zile per săptămână)</item>
        <item>Extrem de activ (Exerciții grele/sport 6–7 zile per săptămână, plus muncă fizică)</item>
    </string-array>
    <string name="tvYourGoal">Scopul tău:</string>
    <string name="rbLose">Vreau să slăbesc</string>
    <string name="rbGain">Vreau să depun masă musculară</string>
    <string name="rbMaintain">Vreau să îmi mențin greutatea</string>
    <string name="btnSumbit">Submit</string>
    <string name="popupText">Mulțumim pentru înregistrare 💜!</string>
    <string name="tvClose">Închide</string>
    <string name="tvCm">cm</string>
    <string name="tvHeight">Înălțimea</string>
    <string name="nameError">Nu ți-ai scris numele!</string>
    <string name="rgSexError">Nicio opțiune selectată pentru sex!</string>
    <string name="npError">Nicio valoare selectată pentru înălțime!</string>
    <string name="weightError">Nu ai introdus greutatea!</string>
    <string name="emailError">Email-ul nu este valid!</string>
    <string name="pwd1Error">Parola trebuie să conțină cel puțin 7 caractere, dintre care cel puțin o literă mare, o literă mică, o cifră și un caracter special!</string>
    <string name="pwd2Error">Introduceți parola!</string>
    <string name="email2Error">Introduceți email-ul!</string>
    <string name="confirmPwdError">Parolele nu sunt identice!</string>
    <string name="ageError">Nu ți-ai introdus vârsta!</string>
    <string name="rgGoalError">Nicio opțiune selectată pentru scop!</string>
    <string name="registerError">Înregistrare nereușită..</string>
    <string name="loginError">Autentificare nereușită.</string>
    <string name="loadUserDataError">User\'s data not found.</string>
    <string name="errorLoadingUserData">Error loading user data.</string>
    <string name="loginSuccess">Autentificare cu succes</string>
    <string name="emailAlreadyExistsError">Există deja un cont cu acest email!</string>
    <string name="emailCheckError">Eroare la încercarea de înregistrare.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="errorSavingUserData">Error saving user data</string>
    <string name="dialog_title">Exerciții</string>
    <string name="dialog_close_btn">Închide</string>
    <string name="tvForgotPassword">Ați uitat parola?</string>
    <string name="toastEmailResetareParola">Email pentru resetarea parolei trimis cu succes.</string>
    <string name="toastErrorEmailResetareParola">Nu s-a reușit trimiterea email-ului pentru resetarea parolei.</string>
    <string name="toastVerifyEmailAddress">Vă rugăm să verificați adresa de email pentru a vă putea autentifica!</string>
    <string name="etNewPwd">Parolă nouă</string>
    <string name="btnSaveNewPad">Salvați</string>
    <string name="toastPasswordChanged">Parola a fost schimbată cu succes.</string>
    <string name="toastErrorResetareParola">Nu s-a reușit resetarea parolei.</string>
    <string name="tvCustomizeYourTraining">Personalizează-ți antrenamentul!</string>
    <string name="tvBeCreative">Fii creativ, dar eficient!</string>
    <string name="hintWorkoutName">Numele antrenamentului</string>
    <string name="tvChooseWorkoutType">Alege tipul antrenamentului</string>
    <string name="rbUpperBody">Partea superioară</string>
    <string name="rbLowerBody">Partea inferioară</string>
    <string name="rbCore">Abdomen</string>
    <string name="rbFullBody">Tot corpul</string>
    <string name="tvAddExercises">Adaugă exercițiile dorite</string>
    <string name="hintNrSets">Numărul de serii</string>
    <string name="hintNrReps">Numărul de repetări per serie</string>
    <string name="tvRestTime">Durata pauzei (în secunde)</string>
    <string name="btnSaveExercise">Adaugă exercițiul</string>
    <string name="toastErrorWorkoutName">Nu ați introdus numele antrenamentului!</string>
    <string name="toastErrorWorkoutType">Nicio opțiune selectată pentru tipul antrenamentului!</string>
    <string name="toastWorkoutSaved">Antrenament creat cu succes</string>
    <string name="toastErrorWorkoutSaved">Antrenamentul nu a fost creat cu succes</string>
    <string name="toastExAddedSuccessfully">Exercițiu adăugat cu succes</string>
    <string name="seekbarRestTime">10</string>
    <string name="toastErrorNrSets">Nu ați introdus numărul de serii</string>
    <string name="toastErrorNrRePs">Nu ați introdus numărul de repetări per serie</string>
    <string name="btnLogout">Logout</string>
    <string name="btnSeeExercises">Vezi exercițiile</string>
    <string name="exercitii">%d exerciții</string>
    <string name="btnUrmatorul">Următorul</string>
    <string name="repetari">%d repetări</string>
    <string name="serii">%d serii</string>
    <string name="secunde">Pauză: %d secunde</string>
    <string name="toastWorkoutDeletedSuccess">Antrenamentul a fost șters cu succes</string>
    <string name="toastErrorWorkoutDeleted">Eroare la ștergerea antrenamentului</string>
    <string name="toastExerciseGroupDeletedSuccess">Exercițiul a fost șters cu succes</string>
    <string name="toastErrorExerciseGroupDeleted">Eroare la ștergerea exercițiului</string>
    <string name="toastWorkoutEditedSuccess">Antrenament modificat cu succes</string>
    <string name="toastErrorWorkoutEdited">Eroare la modificarea antrenamentului</string>
    <string name="toastEnterWorkoutName">Noua denumire a antrenamentului este goală!</string>
    <string name="btnDialogInchide">Închide</string>
    <string name="btnDialogConfirma">Confirmă</string>
    <string name="rbDa">Da</string>
    <string name="rbNu">Nu</string>
    <string name="toastExUpdatedSuccessfully">Exercițiu modificat cu succes</string>
    <string name="toastErrorExUpdated">Eroare la modificarea exercițiului</string>
    <string name="startExercise">Start</string>
    <string name="stopExercise">Stop</string>
    <string name="toastMinuteEx">Ați executat exercițiul în %d minute.</string>
    <string name="toastSecundeEx">Ați executat exercițiul în %d secunde.</string>
    <string name="toastPauzaTerminata">Pauza s-a încheiat! Treceți la următorul exercițiu!</string>
    <string name="toastAntrenamentTerminat">Felicitări! Ai terminat antrenamentul cu o durată totală de %d secunde!</string>
    <string name="toastNumSetsAtins">Ați executat deja %d serii!</string>
    <string name="btnResetTimer">Reset</string>
    <string name="toastEstePauza">Acum este pauza!</string>
    <string name="toastExecutatiExAnterior">Exercițiul anterior nu a fost executat!</string>
    <string name="CZTE">Necesar caloric zilnic: %d calorii </string>
    <string name="carbohidrati">carbohidrati</string>
    <string name="proteine">proteine</string>
    <string name="grasimi">grasimi</string>
    <string name="status">Status: %s</string>
    <string name="macronutrienti">Macronutrienți</string>
    <string name="tvGrafic">Luând în considerare datele dumneavoastră, ar trebui să consumați zilnic următoarele cantități (în grame) de carbohidrați, proteine și grăsimi, echivalentul a %.2f kcal</string>
    <string name="actiuni">Acțiuni</string>
    <string name="tvViewUserData">Vezi datele tale</string>
    <string name="tvEditUserData">Schimbați datele</string>
    <string name="tvCZTE">Necesar caloric zilnic mentenanță (kcal)</string>
    <string name="btnEditati">Editați</string>
    <string name="toastDataUpdated">Datele dumneavoastră au fost modificate</string>
    <string name="btnAddWorkout">Add</string>
    <string name="btnSearchWorkout">Search</string>
    <string name="btnViewExercises">View</string>
    <string-array name="goals">
        <item>Vreau să slăbesc</item>
        <item>Vreau să depun masă musculară</item>
        <item>Vreau să îmi mențin greutatea</item>
    </string-array>
    <string name="hintSearchView">Caută după nume</string>
    <string name="btnFilterCompletat">Completat</string>
    <string name="btnFilterNecompletat">Necompletat/Incomplet</string>
    <string name="btnFiltreaza">Filtrează</string>
    <string name="btnAscundeFiltru">Ascunde filtrare</string>
    <string name="btnAscundeSortare">Ascunde sortare</string>
    <string name="btnSort">Sortează</string>
    <string name="sortByDuration">După durată</string>
    <string name="sortByNrExercises">După nr de exerciții</string>
    <string name="btnVeziDateleMele">Datele mele</string>
    <string name="tvMyReminders">Reminderele mele</string>
    <string name="btnAddReminder">Adaugă reminder</string>
    <string name="tvAdaugaReminder">Adaugă un nou reminder</string>
    <string name="tvDetaliiReminderNou">Completează detaliile de mai jos pentru a adăuga un reminder în lista ta</string>
    <string name="tvReminderTitle">Numele reminderului</string>
    <string name="tvReminderDescription">Descrierea reminderului</string>
    <string name="tvReminderDate">Alegeți data</string>
    <string name="tvReminderTime">Alegeți ora</string>
    <string name="btnSaveReminder">Salvează reminderul</string>
    <string name="toastNevalidDate">Selectați o dată validă!</string>
    <string name="toastNevalidTime">Selectați o oră validă!</string>
    <string name="toastReminderCreat">Reminder creat cu succes!</string>
    <string name="toastErrorReminderTitle">Nu ați introdus titlul reminderului</string>
    <string name="toastErrorReminderDescription">Nu ați introdus conținutul reminderului</string>
    <string name="toastReminderDeletedSuccess">Reminder șters cu succes</string>
    <string name="toastErrorReminderDeleted">Eroare la ștergerea reminderului</string>
    <string name="workoutDurationMinutes">Durata: %.2f minute</string>
    <string name="workoutDurationSeconds">Durata: %d secunde</string>
    <string name="btnVeziDescriereaExercitiului">Vezi descrierea exercitiului</string>
    <string name="btnAdaugaGreutate">Adaugă greutate</string>
    <string name="btnSchimbaGreutatea">Schimbă greutatea</string>
    <string name="tvGreutateCurenta">Greutate utilizată: %.2f kg</string>
    <string name="tvNicioGreutate">Nicio greutate setată</string>
    <string name="toastExercitiuDejaCompletat">Nu puteți modifica greutatea acum deoarece ați completat deja acest exercițiu!</string>
    <string name="btnMyWorkoutStatistics">Statisticile mele</string>
</resources>