<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editWorkoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintWorkoutName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Vrei sa mai adaugi exercitii?"
        android:layout_marginTop="10dp"
        android:textSize="15sp"/>

    <RadioGroup
        android:id="@+id/rgAdaugaEx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <RadioButton
            android:id="@+id/rbDa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbDa"/>

        <RadioButton
            android:id="@+id/rbNu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbNu"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfirma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDialogConfirma"
            android:layout_marginStart="5dp"
            android:background="@drawable/button_ripple_effect2"/>
    </LinearLayout>



</LinearLayout>
