<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddTrainingActivity1"
    android:paddingTop="230dp">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayoutAddTraining"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvCompleteWorkout"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/tvCustomizeYourTraining"
            android:textAlignment="center"
            android:textColor="@color/colorProcent10"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvBeCreative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvBeCreative"
            android:textAlignment="center"
            android:textColor="@color/colorProcent10"
            android:textSize="15sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/etWorkoutName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext_background"
        android:paddingStart="20dp"
        android:ems="10"
        android:hint="@string/hintWorkoutName"
        android:padding="10dp"
        android:textColor="@color/colorProcent10"
        android:textColorHint="@color/hintColor"
        app:layout_constraintEnd_toEndOf="@id/linearLayoutAddTraining"
        app:layout_constraintStart_toStartOf="@id/linearLayoutAddTraining"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutAddTraining"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tvChooseWorkoutType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tvChooseWorkoutType"
        android:textAlignment="center"
        android:textColor="@color/colorProcent10"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/etWorkoutName"
        app:layout_constraintStart_toStartOf="@+id/etWorkoutName"
        app:layout_constraintTop_toBottomOf="@id/etWorkoutName" />

    <RadioGroup
        android:id="@+id/rgWorkoutType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="450dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tvChooseWorkoutType"
        app:layout_constraintStart_toStartOf="@id/tvChooseWorkoutType"
        app:layout_constraintEnd_toEndOf="@id/tvChooseWorkoutType">

        <RadioButton
            android:id="@+id/rbUpperBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorProcent10"
            android:text="@string/rbUpperBody"
            android:textColor="@color/colorProcent10"/>

        <RadioButton
            android:id="@+id/rbLowerBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorProcent10"
            android:text="@string/rbLowerBody"
            android:textColor="@color/colorProcent10"/>

        <RadioButton
            android:id="@+id/rbCore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorProcent10"
            android:text="@string/rbCore"
            android:textColor="@color/colorProcent10"/>

        <RadioButton
            android:id="@+id/rbFullBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorProcent10"
            android:text="@string/rbFullBody"
            android:textColor="@color/colorProcent10"/>
    </RadioGroup>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddTrainingNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorProcent30"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="@+id/etWorkoutName"
        app:layout_constraintTop_toBottomOf="@+id/rgWorkoutType"
        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
