<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reminder_dialog_close_btn"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_baseline_close_24_2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_baseline_add_24"
            android:scaleType="centerCrop"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvAdaugaReminder"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvDetaliiReminderNou"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvReminderTitle"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
             />

        <EditText
            android:id="@+id/etReminderTitle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="3dp"
            android:paddingStart="5dp"
            android:background="@drawable/edittext_reminder"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvReminderDescription"
            android:layout_marginTop="25dp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/etReminderDescription"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="3dp"
            android:paddingStart="5dp"
            android:background="@drawable/edittext_reminder"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnReminderDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvReminderDate"
            android:layout_marginTop="25dp"
            android:textColor="@color/black"
            android:background="@drawable/button_ripple_effect"
            />

        <EditText
            android:id="@+id/etReminderDate"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="7dp"
            android:paddingStart="5dp"
            android:enabled="false"
            android:background="@drawable/edittext_reminder"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnReminderTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvReminderTime"
            android:layout_marginTop="25dp"
            android:textColor="@color/black"
            android:background="@drawable/button_ripple_effect"
            />

        <EditText
            android:id="@+id/etReminderTime"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="7dp"
            android:paddingStart="5dp"
            android:enabled="false"
            android:background="@drawable/edittext_reminder"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSaveReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_ripple_effect_6"
            android:text="@string/btnSaveReminder"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            />

    </LinearLayout>

</ScrollView>